# PR310

./: .gitignore  CMakeLists.txt  compiler.cmake
assets/cpl/shd/: ps_standard.shader  ps_water.shader  ps_watercollision.shader  ps_waterdisplacement.shader  vs_standard.shader  vs_vegetation.shader  vs_water.shader
conf/: appinfo.h.in  version.h.in
driver.d3d11/: CMakeLists.txt
driver.graphics/: CMakeLists.txt
driver.graphics/inc/: rendererinterface.h
driver.graphics/inc/d3d11/: d3d11renderer.h  graphicsbuffer.h  graphicsinterface.h
driver.graphics/src/d3d11/: d3d11renderer.cpp  graphicsinterface.cpp
engine.client/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  camera.cpp  camera.h  client.cpp  client.h  d3d11renderer.cpp  d3d11renderer.h  flycamera.cpp  flycamera.h  main.cpp  material.h  meshrenderer.cpp  meshrenderer.h  shadercb.h
engine.client/CPP/: appWindow.cpp  client.cpp  d3d11renderer.cpp
engine.client/Header/: appWindow.h  camera.h  d3d11renderer.h  flycamera.h  meshrenderer.h  shadercb.h
engine.client/inc/: client.h  material.h
engine.client/src/: meshrenderer.cpp
engine.core/: CMakeLists.txt
engine.core/inc/: engine.h  platform.h  renderwindow.h
engine.core/inc/ecs/component/: componentarray.h  componentcontext.h  componentpool.h  transform.h
engine.core/inc/ecs/entity/: entity.h  entitycontext.h  entitypool.h
engine.core/inc/ecs/system/: system.h  systempool.h  testsystem.h
engine.core/inc/graphics/: content.txt
engine.core/inc/input/: mouse.h
engine.core/src/: engine.cpp  platform.cpp  renderwindow.cpp
engine.core/src/ecs/component/: componentcontext.cpp  transform.cpp
engine.core/src/ecs/entity/: entitycontext.cpp
engine.core/src/input/: mouse.cpp
engine.shared/: CMakeLists.txt  color.h  component.cpp  component.h  gameobject.cpp  gameobject.h  input.cpp  input.h  mat4x4.cpp  mat4x4.h  mathutils.h  mesh.cpp  mesh.h  quaternion.cpp  quaternion.h  singleton.h  time.cpp  time.h  transform.cpp  transform.h  types.h  util.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vertex.h
engine.shared/Header/: component.h  gameobject.h  input.h  mesh.h  quaternion.h  singleton.h  time.h  transform.h  vec2.h  vec3.h
engine.shared/inc/: color.h  vertex.h
engine.shared/inc/math/: mat4x4.h
engine.shared/src/: input.cpp  mesh.cpp
evenlight.client/: CMakeLists.txt
evenlight.client/inc/: appinfo.h
evenlight.client/src/: application.cpp  main.cpp
evenlight.game/: CMakeLists.txt
evenlight.game/shaders/: shadercompiler.bat
pr310.client/: CMakeLists.txt
pr310.client/inc/: application.h  node.h  scenenode.h
pr310.client/res/: resources.rc
pr310.client/src/: application.cpp  main.cpp  node.cpp  scenenode.cpp
pr310.game/: CMakeLists.txt
res/: resources.rc  shadercompiler.bat  structures.hlsl
res/ps/: pixelDefault.hlsl  pixelSDFDefault.hlsl
res/vs/: vertexDefault.hlsl
shared/: CMakeLists.txt
shared/inc/: basetypes.h  bitlogic.h  logging.h  singleton.h  version.h
shared/inc/math/: color.h  mat4x4.h  mathutils.h  quaternion.h  vec2.h  vec3.h
shared/inc/memory/: memutils.h
shared/inc/profiling/: profiler.h  record.h
shared/src/math/: color.cpp  mat4x4.cpp  quaternion.cpp  vec2.cpp  vec3.cpp
shared/src/profiling/: profiler.cpp  record.cpp
