# define project
project(engine.client C CXX)
SET(TARGET_NAME engine.client)

cmake_minimum_required (VERSION 3.9)

# Add source to this project's executable.
add_executable(${TARGET_NAME} "../res/appicon.ico" "../res/resources.rc")

# add sources to target
target_sources(
    ${TARGET_NAME}
    PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}/Header/client.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/Header/appwindow.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/Header/d3d11renderer.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/Header/camera.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/Header/material.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/Header/meshrenderer.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/Header/shadercb.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/Header/stb_image.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/Header/flycamera.h"
    PRIVATE
        "${CMAKE_CURRENT_SOURCE_DIR}/CPP/main.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/CPP/client.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/CPP/appwindow.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/CPP/d3d11renderer.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/CPP/camera.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/CPP/meshrenderer.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/CPP/flycamera.cpp"
)

# set additional target properties
set_target_properties(${TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX DEBUG_POSTFIX ".debug")

# link libraries against the target
target_link_libraries(${TARGET_NAME}
    engine.shared
    D3D11 DXGI D3DCompiler)

# additional includes for target
target_include_directories(
    ${TARGET_NAME}
    PRIVATE
    "${CMAKE_SOURCE_DIR}/engine.shared/Header"
    "${CMAKE_CURRENT_SOURCE_DIR}/Header"
	"${CMAKE_CURRENT_SOURCE_DIR}/includes"
)
